Fix moz navlink wrapping

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -910,7 +910,7 @@ nav {
 
     .custom-nav-links {
        
-        font-size: 1.5rem;
+        font-size: 1.4rem;
     }
 
     .footer-links {
@@ -1013,7 +1013,7 @@ nav {
     }
 
     .custom-nav-links {
-        font-size: 2rem;
+        font-size: 1.9rem;
     }
 
     .about-row {
